# clfft

./: .gitignore  CMakeLists.txt
src/: bufferedrecorder.cpp  bufferedrecorder.hpp  clbuffer.hpp  clkernel.hpp  clwrapper.cpp  clwrapper.hpp  kernels.cl  main.cpp
